Fixed line spacing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .character-info p {
-    line-height: 75%;
-    
+    margin: 0;
+    padding-top: 5pt;
 }
 
 .stats p {
@@ -16,6 +16,7 @@ h1 {
     font-family: "Amatic SC", serif;
     font-weight: bold;
     font-size: 300%;
+    margin-top: 10pt;
 }
 
 .version-footer {
